--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hatena Blogs - Neo's GitHub Pages</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/favicon.ico">
     <link rel="icon" href="/favicon-192x192.png" sizes="192x192" type="image/png">
     <link rel="apple-touch-icon" href="/apple-touch-icon-152x152.png" sizes="152x152">
   </head>
-  <body id="neos21-github-io">
-    <header id="header">
-      <div id="logo"><a href="../index.html">Neo's GitHub Pages</a></div>
-    </header>
-    <main id="main">
+  <body>
+    <header><a href="/index.html">Neo's GitHub Pages</a></header>
+    <main>
       <section>
         <h1>Hatena Blogs</h1>
         <p>
@@ -23,10 +20,16 @@
         </p>
         <p>自分が運営しているはてなブログのテーマやカスタム HTML などを保存しておくリポジトリです。</p>
         <dl>
+          <dt>Core</dt>
+          <dd>
+            <ul>
+              <li><a href="./src/styles/core.css">core.css</a></li>
+            </ul>
+          </dd>
           <dt><a href="https://neos21.hatenablog.com/">Corredor</a></dt>
           <dd>
             <ul>
-              <li><a href="./dist/styles/corredor.css">corredor.css</a> (Source : <a href="./src/styles/corredor.scss">corredor.scss</a>)</li>
+              <li><a href="./dist/styles/corredor.css">corredor.css</a> (Source : <a href="./src/styles/corredor.css">corredor.css</a>)</li>
               <li><a href="./src/html/corredor-head.html">corredor-head.html</a></li>
               <li><a href="./src/html/corredor-header.html">corredor-header.html</a></li>
               <li><a href="./src/html/corredor-sidebar.html">corredor-sidebar.html</a></li>
@@ -36,7 +39,7 @@
           <dt><a href="https://neos21.hatenablog.jp/">Murga</a></dt>
           <dd>
             <ul>
-              <li><a href="./dist/styles/murga.css">murga.css</a> (Source : <a href="./src/styles/murga.scss">murga.scss</a>)</li>
+              <li><a href="./dist/styles/murga.css">murga.css</a> (Source : <a href="./src/styles/murga.css">murga.css</a>)</li>
               <li><a href="./src/html/murga-head.html">murga-head.html</a></li>
               <li><a href="./src/html/murga-header.html">murga-header.html</a></li>
               <li><a href="./src/html/murga-sidebar.html">murga-sidebar.html</a></li>
@@ -46,7 +49,7 @@
           <dt><a href="https://neos21.hateblo.jp/">El Mylar</a></dt>
           <dd>
             <ul>
-              <li><a href="./dist/styles/el-mylar.css">el-mylar.css</a> (Source : <a href="./src/styles/el-mylar.scss">el-mylar.scss</a>)</li>
+              <li><a href="./dist/styles/el-mylar.css">el-mylar.css</a> (Source : <a href="./src/styles/el-mylar.css">el-mylar.css</a>)</li>
               <li><a href="./src/html/el-mylar-head.html">el-mylar-head.html</a></li>
               <li><a href="./src/html/el-mylar-header.html">el-mylar-header.html</a></li>
               <li><a href="./src/html/el-mylar-sidebar.html">el-mylar-sidebar.html</a></li>
@@ -82,8 +85,6 @@
         </section>
       </section>
     </main>
-    <footer id="footer">
-      <div id="copyright"><small>Copyright &copy; 2016-2020 <a href="../index.html">Neo</a>, All rights reserved.</small></div>
-    </footer>
+    <footer>Copyright &copy; 2016-2020 <a href="/index.html">Neo</a>, All rights reserved.</footer>
   </body>
 </html>
