--- a/src/html/corredor-footer.html
+++ b/src/html/corredor-footer.html
@@ -5,28 +5,27 @@
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </div>
 <div id="footer-links">
-  <ul id="footer-links-about">
+  <ul>
     <li><a href="/about">Neo</a></li>
-    <li>:</li>
     <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
-    <li><a href="https://neos21.hatenablog.com/">Corredor</a></li>
+    <li><a href="https://neos21.hatenablog.com/" id="footer-link-active">Corredor</a></li>
     <li><a href="https://neos21.hatenablog.jp/">Murga</a></li>
     <li><a href="https://neos21.hateblo.jp/">El Mylar</a></li>
     <li><a href="https://neos21.github.io/">Neo's GitHub Pages</a></li>
   </ul>
-  <ul id="footer-links-sns">
+  <ul>
     <li><a href="https://github.com/Neos21">GitHub</a></li>
     <li><a href="https://www.npmjs.com/~neos21">npm</a></li>
     <li><a href="https://www.facebook.com/Neos21">Facebook</a></li>
     <li><a href="https://www.instagram.com/Neos21">Instagram</a></li>
   </ul>
-  <ul id="footer-links-sponsors">
+  <ul>
     <li><a href="https://amzn.to/2wcjVoM">Amazon Wish List</a></li>
-    <li><a href="https://github.com/sponsors/Neos21">GitHub Sponsors</a>
-  </li>
+    <li><a href="https://github.com/sponsors/Neos21">GitHub Sponsors</a></li>
     <li><a href="https://www.patreon.com/Neos21">Patreon</a></li>
     <li><a href="https://fantia.jp/Neos21">Fantia</a></li>
     <li><a href="https://enty.jp/Neos21">Enty</a></li>
     <li><a href="https://profile.coconala.com/users/1578422">Coconala</a></li>
   </ul>
+  <div><a href="#"><i class="blogicon-chevron-up"></i></a></div>
 </div>
